<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pixonsoft.demolivraria.EditLivroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Titulo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Autor"
        />

    <EditText
        android:id="@+id/etAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Autor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ISBN"
        />

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ISBN"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Editora"
        />

    <EditText
        android:id="@+id/etEditora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Editora"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descrição"
        />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Descrição"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btSave"
        android:text="@string/salvar" />

</LinearLayout>
